--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -33,8 +33,8 @@
     --el-menu-base-level-padding: 14px;
     --el-menu-item-height: 42px;
     --el-menu-item-font-size: 12px;
-    --main-color: #396bd1;
-    --el-menu-active-color: #396bd1;
+    --main-color: #385df0;
+    --el-menu-active-color: #385df0;
     --el-menu-hover-bg-color: #b5c7ee;
     --hover-color: #b5c7ee;
     --el-menu-icon-width: 38px;
