--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -98,3 +98,226 @@ body {
     color: var(--color-primary);
     font-weight: 600;
 }
+
+.patient_relative {
+    position: relative;
+    display: block;
+    width: 330px;
+    flex-shrink: 0;
+}
+.new_patient_box {
+    display: flex;
+    position: fixed;
+    width: 330px;
+    background: #fff;
+    height: 100%;
+    top: 20px;
+    z-index: 2;
+
+}
+.new_patient_body {
+    display: block;
+    width: 100%;
+    padding-top: 80px;
+    border-right: 1px solid rgba(17, 17, 26, 0.1);
+}
+.new_patient_image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.new_patient_image a {
+    text-align: center !important;
+    font-weight: 600;
+    margin: 0 10px;
+    color: var(--el-color-primary)
+}
+.new_patient_image div img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: contain;
+    border: 2px solid var(--el-color-primary);
+}
+.new_patient_image span {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+}
+.patient_left_bio {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 8px 0;
+}
+.new_patient_info {
+    margin-top: 10px;
+    padding: 0 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 85px;
+    grid-gap: 10px;
+}
+.new_patient_address {
+    margin-top: 10px;
+    padding: 0 10px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: minmax(85px, 115px);
+    grid-gap: 10px;
+}
+.new_patient_info_item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 85px;
+    background-color: rgba(248, 249, 250, 1);
+    border: 1px solid var(--el-color-primary);
+    border-radius: 8.53px;
+    padding: 8px;
+}
+.new_patient_info_item div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.new_patient_info_item div i {
+    color: var(--el-color-primary);
+}
+.new_patient_info_item svg {
+    height: 25px;
+}
+.new_patient_info_item div h5 {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 12px;
+    color: var(--el-color-primary);
+}
+.new_patient_info_item span {
+    margin-top: 5px;
+    font-size: 13.5px;
+    font-weight: 400;
+    color: var(--color-dark);
+}
+.new_patient_info_item i {
+    margin-top: 5px;
+    font-size: 13.5px;
+    font-weight: 500;
+    color: var(--el-color-primary);
+}
+.copy_identifier {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.copy_identifier::before {
+    content: '\f0c5';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    position: absolute;
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    transition: opacity 0.3s;
+    font-size: 16px;
+    color: var(--el-color-primary);
+}
+
+.copy_identifier::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(5px);
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 0;
+}
+.new_patient_address {
+    margin-top: 10px;
+    padding: 0 10px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: minmax(85px, 115px);
+    grid-gap: 10px;
+}
+
+.patient_address_item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 135px;
+    max-height: 145px;
+    background-color: rgba(248, 249, 250, 1);
+    border: 1px solid var(--el-color-primary);
+    border-radius: 8.53px;
+    padding: 8px;
+}
+.patient_address_item {
+    color: var(--el-color-primary);
+}
+.patient_address_item svg {
+    height: 25px;
+}
+.patient_address_item div h5 {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    font-size: 12px;
+    font-weight: 700;
+    color: var(--el-color-primary);
+}
+.patient_address_item span {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5px;
+    font-size: 13.5px;
+    font-weight: 400;
+    line-height: 15.5px;
+    color: var(--color-dark);
+}
+.patient_address_item div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.copy_identifier:hover::before {
+    opacity: 1;
+}
+.new_address_text {
+
+}
+
+.copy_identifier:hover::after {
+    opacity: 1;
+}
+.content_with_patient {
+    overflow-y: auto;
+
+}
+.all_content_box {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    > .content {
+        padding: 0;
+
+    }
+    transition: all 0.5s ease;
+}
+.content_with_patient {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    transition: all 0.5s ease;
+}
